added jdbc show table schema feature